Fix input on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -56,9 +56,9 @@ a {
 }
 
 input{
-  /*-webkit-appearance: none;*/
+  /*-webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
+  appearance: none;*/
 }
 
 /*Estilos generales*/
